--- a/css/style.css
+++ b/css/style.css
@@ -350,7 +350,7 @@
 html, body {
 	
 
-
+	background-color: #902f47;
 	font-family: Arial, Helvetica, Sans-serif;
     height: 100%;
     margin: 0;
@@ -394,9 +394,9 @@ html, body {
     }
 }
 
-h1{	
-	color:#FFD700;
-	font-family: 'Great Vibes', cursive;
+.bridegroomname{	
+	color:#f8de7e;
+	font-family: 'Dancing Script';
 	font-weight: 400;
 	font-size:60px;
 	text-shadow: 1px 1px 1px #000;
@@ -404,10 +404,22 @@ h1{
     -moz-animation: fadein 3s; /* Firefox */
     -webkit-animation: fadein 3s; /* Safari and Chrome */
     -o-animation: fadein 3s; /* Opera */
+	margin-top: 35% !important;
+}
+
+.maintitle1 {
+	color:#f8de7e;
+	font-family:'Copperplate';
+	margin-top: 100px !important;
+}
+
+.maintitle2 {
+	color:#f8de7e;
+	font-family:'Copperplate';
 }
 
 .div1 {
-	
+	clear:both;
 	background: url(../img/BG1.jpg);
 	background-repeat: no-repeat;
 	background-size: 100%;
@@ -416,12 +428,16 @@ h1{
 	background-color: #902f47;
 	top: 0; right: 0; bottom: 0; left: 0;
 	
+	height: 1784px;
+
+	
+	
 
    
   }
   
   .div2 {
-
+	clear:both;
 	background: url(../img/BG2.jpg);
 	background-repeat: no-repeat;
 	background-size: 100%;
@@ -429,9 +445,102 @@ h1{
 	overflow: hidden;
 	background-color: #902f47;
 	top: 0; right: 0; bottom: 0; left: 0;
+	display:block;
+	height: 1784px;
+	display: flex;
+	margin-top: 10px;
 
   
   }
+
+
+  @media only screen and (max-device-width: 640px) {
+
+	.bridegroomname{	
+		color:#f8de7e;
+		font-family: 'Dancing Script';
+		font-weight: 400;
+		font-size:40px;
+		text-shadow: 1px 1px 1px #000;
+		animation: fadein 3s;
+		-moz-animation: fadein 3s; /* Firefox */
+		-webkit-animation: fadein 3s; /* Safari and Chrome */
+		-o-animation: fadein 3s; /* Opera */
+		margin-top: 5% !important;
+	}
+
+	.bridegroomname2{	
+		color:#f8de7e;
+		font-family: 'Dancing Script';
+		font-weight: 400;
+		font-size:40px;
+		text-shadow: 1px 1px 1px #000;
+		animation: fadein 3s;
+		-moz-animation: fadein 3s; /* Firefox */
+		-webkit-animation: fadein 3s; /* Safari and Chrome */
+		-o-animation: fadein 3s; /* Opera */
+		margin-top: 5% !important;
+	}
+
+	
+	
+	.maintitle1 {
+		color:#f8de7e;
+		font-family:'Copperplate';
+		margin-top: 40% !important;
+		font-size:10px !important;
+	}
+
+	.maintitle2 {
+		color:#f8de7e;
+		font-family:'Copperplate';
+		font-size:10px !important;
+	}
+
+	.and {
+		color:#f8de7e;
+		font-family:'Copperplate';
+		font-weight: lighter;
+		font-size:20px;
+		top: 0;
+	}
+	
+
+	
+	.div1 {
+		clear:both;
+		background: url(../img/BG1.jpg);
+		background-repeat: no-repeat;
+		background-size: 100% ;
+		background-position: center top;
+		overflow: hidden;
+		
+		top: 0; right: 0; bottom: 0; left: 0;
+		
+		max-height: 560px;
+		
+		
+	
+	   
+	  }
+	  
+	  .div2 {
+		clear:both;
+		background: url(../img/BG2.jpg);
+		background-repeat: no-repeat;
+		background-size: 100%;
+		background-position: center top;
+		overflow: hidden;
+		
+		top: 0; right: 0; bottom: 0; left: 0;
+		
+		max-height: 860px;
+		
+	
+	
+	  
+	  }
+}
 
 
 /*******************************/
@@ -444,189 +553,8 @@ h1{
 
 
 
-.top-right-decoration {
-	position: absolute;
-	top: 0;
-	right: 0;
-	display: block;
-}
-
-.top-left-decoration {
-	position: absolute;
-	top: 0;
-	left: 0;
-	display: block;
-}
-
-.title h1 {
-	font-family: 'Dancing Script', cursive;
-	font-weight: bold;
-	font-style: normal;
-	font-size: 60px;
-	margin: 32px 0;
-	color: #674ea7;
-}
-
-.title h2 {
-	font-family: 'Dancing Script', cursive;
-	font-weight: bold;
-	font-style: normal;
-	margin: 0;
-	padding: 0;
-	font-size: 24px;
-	color: #e25c67;
-	line-height: 1;
-}
-
-.dance-med {
-	font-family: 'Dancing Script', cursive;
-	font-weight: bolder;
-	font-style: normal;
-	font-size: 32px;
-	color: #674ea7;
-	margin: 16px;
-	text-align: center;
-}
-
-.title h3 {
-	font-weight: 300;
-	text-transform: uppercase;
-	letter-spacing: 5px;
-	font-size: 24px;
-	color: #674ea7;
-	margin-top: 5px;
-}
-
-.title p {
-	color: #564861;
-	margin: 30px 0 20px;
-	text-transform: uppercase;
-	letter-spacing: 3px;
-	font-size: 16px;
-}
-
-.wrap {
-	display: -webkit-flex;
-	display: flex;
-	-webkit-flex-wrap: wrap;
-	flex-wrap: wrap;
-	-webkit-justify-content: center;
-	justify-content: center;
-	-webkit-align-items: center;
-	align-items: center;
-	/* padding: 20px; */
-	text-align: center;
-	/* min-height:100%; */
-}
 
 
-/** **/
-
-* {
-	/* margin: 0;
-    padding: 0; */
-	font-family: 'Arvo', serif;
-}
-
-
-
-.title {
-	margin-bottom: 40px;
-}
-
-#time {
-	width: auto;
-	height: auto;
-	padding: 20px;
-	background-color: #eee;
-	border-radius: 20px;
-	font-size: 16px;
-}
-
-.venue {
-	width: auto;
-	height: auto;
-	background-color: #674ea7;
-	border-radius: 16px;
-	text-align: center;
-	color: #fff;
-	padding: 8px;
-	margin-right: 8px;
-}
-
-.venue a {
-	text-decoration: none;
-	color: #fff;
-}
-
-.container {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	border-radius: 10px;
-	overflow: hidden;
-}
-
-.block {
-	width: 180px;
-	height: 160px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-	color: #fff;
-}
-
-.days {
-	background: linear-gradient(90deg, #b33a46, #9b313c);
-}
-
-.hours {
-	background: linear-gradient(90deg, #a7c3cd, #90a9b2);
-}
-
-.minutes {
-	background-color: #874562;
-}
-
-.seconds {
-	background-color: #145689;
-}
-
-.date {
-	color: #874562;
-	font-weight: 900;
-}
-
-.place {
-	color: #874562;
-	font-weight: 900;
-}
-
-.footer {
-	color: #564861;
-	text-align: center;
-	font-size: 16px;
-	margin: 24px;
-}
-
-.phone {
-	color: #874562
-}
-
-.end-msg {
-	width: auto;
-	height: auto;
-	padding: 12px;
-	background: linear-gradient(90deg, #b33a46, #9b313c);
-	border-radius: 20px;
-	font-size: 14px;
-	color: #fff;
-	font-size: 24px;
-}
-
-a {
-	text-decoration: none;
-}
 
 .happiness {
 	color: #874562;
