--- a/css/style.css
+++ b/css/style.css
@@ -495,6 +495,13 @@ html, body {
 		color:#f8de7e;
 		font-family:'Copperplate';
 		font-size:10px !important;
+		margin-top:10px;
+	}
+
+	.line {
+		width: 220px;
+	
+		border: 1px solid #f8de7e;
 	}
 
 	.and {
@@ -504,6 +511,36 @@ html, body {
 		font-size:20px;
 		top: 0;
 	}
+
+	.date1 {
+		color:#f8de7e;
+		font-family:'Copperplate';
+		font-weight: lighter;
+		font-size:25px;
+		top: 0;
+	}
+
+	.time1 {
+		color:#f8de7e;
+		font-family:'Copperplate';
+		font-weight: lighter;
+		font-size:14px;
+		top: 0;
+	}
+
+	.scrolldown {
+		margin-top:50px;
+	
+	}
+
+	.venue1 {
+		color:#f8de7e;
+		font-family:'Copperplate';
+		font-weight: lighter;
+		font-size:10px;
+		top: 0;
+	}
+	
 	
 
 	
@@ -617,3 +654,68 @@ html, body {
 .nav__icon {
     font-size: 18px;
 }
+
+
+
+
+
+
+ .indicator {
+	position: relative;
+	width: 10px;
+	height: 10px;
+	transform: rotate(45deg);
+	opacity: 0.5;
+  }
+  .indicator span {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	box-sizing: border-box;
+	border: none;
+	border-bottom: 3px solid #fff;
+	border-right: 3px solid #fff;
+	animation: animate 1s linear infinite;
+  }
+  .indicator span:nth-child(1) {
+	top: -30px;
+	left: -30px;
+	animation-delay: 0s;
+  }
+  .indicator span:nth-child(2) {
+	top: -15px;
+	left: -15px;
+	animation-delay: 0.2s;
+  }
+.indicator span:nth-child(3) {
+	top: 0;
+	left: 0;
+	animation-delay: 0.4s;
+  }
+.indicator span:nth-child(4) {
+	top: 15px;
+	left: 15px;
+	animation-delay: 0.6s;
+  }
+ .indicator span:nth-child(5) {
+	top: 30px;
+	left: 30px;
+	animation-delay: 0.8s;
+  }
+  @keyframes animate {
+	0% {
+	  border-color: #fff;
+	  transform: translate(0, 0);
+	}
+	20% {
+	  border-color: #fff;
+	  transform: translate(15px, 15px);
+	}
+	20.1%,
+	100% {
+	  border-color: #ffd64a;
+	}
+  }
+  
