--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,42 @@
 
 
+.modalz {
+
+	/* Hidden by default */
+	position: fixed;
+	/* Stay in place */
+	z-index: 910000000 !important;
+	padding-top: 10px;
+	/* Location of the box */
+	left: 0;
+	top: 0;
+	width: 100%;
+	/* Full width */
+	height: 100%;
+	/* Full height */
+	overflow: auto;
+	/* Enable scroll if needed */
+	background-color: rgb(0, 0, 0);
+	/* Fallback color */
+	background-color: rgba(0, 0, 0, 0.4);
+	/* Black w/ opacity */
+	background: rgba(255, 255, 255, .8) url('http://i.stack.imgur.com/FhHRx.gif') 50% 50% no-repeat;
+}
+
+/* When the body has the loading class, we turn
+the scrollbar off with overflow:hidden */
+body.loading .modalz {
+	overflow: hidden;
+}
+
+/* Anytime the body has the loading class, our
+modal element will be visible */
+body.loading .modalz {
+	display: block;
+}
+
+
+
 .sakura {
 	/* background: -webkit-linear-gradient(120deg, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));
     background: linear-gradient(120deg, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));*/
@@ -7,6 +44,7 @@
 	pointer-events: none;
 	position: absolute
 }
+
 
 
 
@@ -18,6 +56,7 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
+	display:none;
 }
 
 .sakura {
@@ -98,6 +137,9 @@ html, body {
 
    
   }
+
+
+
   
   .div2 {
 	clear:both;
@@ -118,6 +160,17 @@ html, body {
 
 
   @media only screen and (max-device-width: 640px) {
+
+	html, body {
+	
+
+		background-color: #902f47;
+		font-family: Arial, Helvetica, Sans-serif;
+		height: 100%;
+		margin: 0;
+		padding: 0;
+		display:block;
+	}
 
 	.bridegroomname{	
 		color:#f8de7e !important;
@@ -214,14 +267,8 @@ html, body {
 		background-size: 100%  !important;
 		background-position: center top !important;
 		overflow: hidden !important;
-		
 		top: 0; right: 0; bottom: 0; left: 0 !important;
-		
-		max-height: 560px !important;
-		
-		
-	
-	   
+		max-height: 510px !important;
 	  }
 	  
 	  .div2 {
@@ -234,7 +281,7 @@ html, body {
 	
 		top: 0; right: 0; bottom: 0; left: 0 !important;
 		
-		max-height: 700px !important;
+		max-height: 510px !important;
 		
 	
 	
